// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`while running in a browser environment should render correctly 1`] = `
<div>
  <div
    style="display: inline-block;"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      autocomplete="off"
      role="combobox"
      value=""
    />
  </div>
</div>
`;

exports[`while running in a browser environment should render correctly with params 1`] = `
<div>
  <div
    style="display: inline-block;"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      autocomplete="off"
      role="combobox"
      value="foo"
    />
  </div>
</div>
`;
